# twitch-emote-parser-rs

./: Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
